@@ -1,3 +1,10 @@
+2001-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (erase): New method to reset image to background
+ 	color.  Still need to update documentation.
+	(strokeAntiAlias): New method to control antialiasing of stroked
+ 	objects.  Still need to update documentation.
+
 2001-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (channel): Renamed method from 'layer' to match
